blog/style/main.css
html {
    overflow-y: scroll;
}
body {
    background-color: white;
    margin: 0 auto;
    padding:0;
    width: 800px;
    font-family:Droid Sans, sans-serif;
    font-size:12pt;
    color:#111;
}
header {
    margin: 20px 0;
    position:relative;
    text-decoration: none;
    text-align: center;
    font-family: Reenie Beanie, sans-serif;
    font-size:26pt;
    font-weight:bold;
}
header::after { /* the horizontal line in the header */
    content:"";
    display:block;
    border-bottom:1px solid #888;
    position:absolute;
    top:50%;
    width:100%;
    z-index:-1;
}
header a { 
    text-decoration:none;
    background-color:#fff;
    display:inline-block;
    padding:0px 12px 0 10px;
    position:relative;
}
/* the animation that pulls back the horizontal header line
 * do this via absolute psuedoelements instead of padding animation
 * because the padding change / text-align:center was causing text jitter
 */
header a::after,
header a::before {
    content:"";
    display:block;
    background-color:#FFF;
    width:0px;
    height:50%;
    position:absolute;
    top:25%;
    transition: width 0.2s ease;
}
header a:hover::after,
header a:hover::before {
    width:20px;
}
header a::after {
    left:100%;
}
header a::before {
    right:100%;
}
a {
    color:#F56017;
    text-decoration:none;
    transition:color 0.2s ease;
}
a:hover {
    color:#D15214;
}
.first-name {
    color:#555;
}
.last-name {
    color:#F56017;
}
article {
    text-align: justify;
    line-height:1.5em;
}
article h1 {
    margin:0 0 32px 0;
    color:#F56017;
}
article h2 {
    font-weight:normal;
    font-size:16pt;
}
article h3 {
    font-weight:normal;
    font-size:14pt;
}
article time {
    float:right;
    color:#888;
}
.util-links {
    clear:both;
    text-align: center;
    margin:20px 0;
}
.util-links a {
    color:#888;
    display:inline-block;
    padding: 5px 10px;
    text-align:center;
    font-size:10pt;
}
.util-links a:hover {
    color:#666;
}
.highlight pre {
    font-family: Inconsolata, monospace;
    line-height:1.2em;

}
.highlight {
    border: 1px solid #cccccc;
    padding-left: 1em;
    margin-bottom: 10px;
    margin-top: 10px;
    background: none repeat scroll 0 0 #f0f0f0;
    overflow: auto;
}
.tags {
    margin-top: 20px;
    text-align: center;
}
.pager {
    overflow:auto;
    margin: 20px 0;
}
.prev { float: right }
.next { float: left }
.search-box {
    display:block;
    margin: 20px auto 28px auto;
    width:220px;
    padding:5px;
    border: 1px solid #999;
    transition: box-shadow 0.25s;
    border-radius:0;
}
.search-box:focus {
    box-shadow: 0 0 5px #999999;
    outline:none;
}

@media (max-width:915px) {
    nav { 
        /* todo: the nav is a nicety and not really 
           necessary, but we probably need a better 
           way than just hiding it.
         */
        display:none;
    }
}
@media (max-width:800px) {
    body {
        width:98%;
        padding:0 1%;
    }
    article h1 {
        width:100%;
        text-align:center;
    }
    article time {
        width:100%;
        text-align:center;
    }
}
/* navigation */

nav ul, nav li {
    margin:0;
    padding:0;
    list-style-type:none;
}
nav {
    position:fixed;
    top:0;
    left:0;
    margin:10px;
}
nav a {
    display:inline-block;
    text-align:center;
    border: 1px solid #fff;
    font-size:2.5em;
    transition:none;
    vertical-align:middle;
}
nav a.top, nav a.bottom {
    width:0.5em;
    height:0.5em;
    padding:10px;
}
nav a.root {
    width:40px;
    line-height:40px;
    font-size:1.5em;
}
nav .label {
    line-height:40px;
    display:inline-block;
    padding-left:10px;
    width:0;
    overflow:hidden;
    color:#888;
    transition:none;
    background-color:#fff;
}
nav li:hover .label {
    width:100px;
    transition:width 0.2s linear;
}
nav:hover a {
    background-color:#F7F7F7;
    border: 1px solid #eee;
}
nav a:hover {
    background-color:#F56017;
    color:#fff;
}

/* !important hack to override g+'s inline styles */
#comments div {
    display:block !important;
    margin:20px auto !important;
}

